fix compileAdditionalStyles func

--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "pathToLessc": "node_modules/less/bin/lessc",
     "filePathMain": "../testProject/public/style.less",
     "fileDirMain": "../testProject/public",
+    "pathToVariables": "../testProject/public/customization/variablesLibrary.less",
     "additionalDirForCss": "../testProject/public/brands",
     "nameForCss": "style.css",
     "pathToTsc": "node_modules/typescript/bin/tsc",
