--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node node_modules/less/bin/lessc ./public/style.less > ./public/style.css && tsc",
     "watch": "node observers",
+    "compile": "node lessCompiler",
     "start": "npm run build && node index"
   },
   "author": "",
