--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "less": "^3.10.3",
     "tslint": "^5.20.1",
     "typescript": "^3.7.4"
+  },
+  "dependencies": {
+    "clean-css": "^4.2.1",
+    "clean-css-cli": "^4.3.0"
   }
 }
