--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "typescript": "^3.7.4"
   },
   "dependencies": {
-    "clean-css": "^4.2.1",
-    "clean-css-cli": "^4.3.0"
+    "less-plugin-clean-css": "^1.5.1"
   }
 }
